--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Test</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Wird die Seite automatisch an mobile angepasst?</h1>
+<p>Hoffentlich <3</p>
 
 </body>
 </html>
