--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Wird die Seite automatisch an mobile angepasst?</h1>
-<p>Hoffentlich <3</p>
+<p>Hoffentlich lol </p>
 
 </body>
 </html>
